# cafecito

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  DOGFOOD.md  LAUNCH.md  LICENSE  PLAN.md  README.md  SECURITY.md  SPEC.md  conftest.py  dogfood.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
bench/: README.md  mergebench.py
bench/results/: ci_measurements.json  mergebench.json
cafecito/: __init__.py  cli.py  closure.py  doctor.py  engine.py  facts.py  fleetstate.py  gate.py  ingest.py  isolation.py  mcp_server.py  onboard.py  regen.py  spans.py  swarm.py  watch.py  writeset.py
cafecito.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
cafecito/tests/: smoke.py  test_advance.py  test_closure_langs.py  test_doctor.py  test_facts.py  test_gate.py  test_gate_langs.py  test_generated.py  test_ingest.py  test_isolation.py  test_landing_message.py  test_mcp_server.py  test_memoization.py  test_onboard.py  test_parallel.py  test_regen.py  test_regen_retry.py  test_setup_cmd.py  test_spans.py  test_spans_json.py  test_swarm.py  test_swarm_drift.py  test_swarm_hardening.py  test_version.py  test_watch.py  test_writeset.py
docs/: building-itself.md  cafecito-explainer-source.md  index.html  launch-post.md
engine/: README.md  gate.py  gitutil.py  landing.py  regen.py  smoke_test.py
engine/tests/: test_gate.py  test_landing_message.py  test_regen.py
examples/: README.md  demo.cast  demo.sh  demo_swarm.py  demo_swarm_split.sh  swarm-demo.cast  swarm-split.cast
gateway/: README.md
mcp/: README.md  server.py
oracle/: README.md  writeset.py
oracle/tests/: test_writeset.py
phase0/: README.md  agent_corpus.py  attrib.py  experiment_a.py  experiment_a_multilang.py  experiment_b.py  find_conflicts.py  mine.py  run_corpus.py  validate_b.py
sdk/: README.md
