[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cafecito"
version = "0.14.1"
description = "An integration control plane for AI agent fleets: land in parallel, regenerate collisions, never resolve a conflict."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [{ name = "The cafecito authors" }]
keywords = ["ai-agents", "merge-queue", "mcp", "ci", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "License :: OSI Approved :: Apache Software License",
]

[project.scripts]
cafecito = "cafecito.cli:main"

[project.urls]
Homepage = "https://cafeci.to"
Source = "https://github.com/cafecitohq/cafecito"
Issues = "https://github.com/cafecitohq/cafecito/issues"
Changelog = "https://github.com/cafecitohq/cafecito/releases"

[tool.setuptools]
packages = ["cafecito", "cafecito.tests"]
